--- a/Advance Python/Lab/Code/Lab-1.ipynb
+++ b/Advance Python/Lab/Code/Lab-1.ipynb
@@ -13,6 +13,24 @@
     "\n",
     "directory_Path = \"D:\\Ghanu Study\\Sem-5\\Advance Python\\Lab\\Code\\Directory\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0f93c19f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jay Swaminarayan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Jay Swaminarayan\")"
+   ]
   }
  ],
  "metadata": {
